# numlib

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/bignum/: add.rs  compare.rs  constructor.rs  modulo.rs  mul.rs  sub.rs
benches/bignum/utils/: fft.rs
examples/: integrate_ex.rs  integrate_periodic_ex.rs  trapezoid_simpson_ex.rs
src/: .integrate.rs.swn  .integrate.rs.swp  .lib.rs.swo  .lib.rs.swp  bignum.rs  diff_eq_solver.rs  integrate.rs  lib.rs
src/bignum/: compare.rs  mul.rs
tests/: .integration_test.rs.swp  integration_test.rs
