[package]
name = "numlib"
version = "0.1.0"
authors = ["Luke Bhan  <luke.bhan@vanderbilt.edu>"]
edition = "2018"
keywords = ["integreate", "numerical", "Runge-Kutta", "Trapezoid"]
license = "MIT"
description = "A simple numerical library implementing common numberical algorithms in rust"
homepage = "https://github.com/luke-bhan/numlib"
respository = "https://github.com/luke-bhan/numlib"
documentation = "Most documentation is done in the comments for the methods. More Coming Soon"
exclude = [".gitignore"]

[badges]
travis-ci = {repository = "luke-bhan/numlib", branch = "master"}

[dependencies]
assert_approx_eq = "1.1.0"
