[package]
name = "numlib"
version = "0.1.1"
authors = ["Luke Bhan  <luke.bhan@vanderbilt.edu>"]
edition = "2018"

[features]
benchmark-internals = []

[[bench]]
name = "ctor"
path = "benches/bignum/constructor.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "compare"
path = "benches/bignum/compare.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "mod"
path = "benches/bignum/modulo.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "mul"
path = "benches/bignum/mul.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "add"
path = "benches/bignum/add.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "sub"
path = "benches/bignum/sub.rs"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "fft"
path = "benches/bignum/utils/fft.rs"
harness = false
required-features = ["benchmark-internals"]

[dev-dependencies]
criterion = "0.3.2"
